<resources>
    <string name="app_name">Shoe Store</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="products_feed">Shoes Feed</string>
    <string name="product_details">Shoe Details</string>
    <!-- Dummy data for example buttons -->
    <string name="welcomeButtonOk">WELCOME SCREEN</string>
    <string name="instructionButtonOk">INSTRUCTIONS SCREEN</string>
    <string name="feedButtonOk">FEED SCREEN</string>
    <string name="actionBack">PRODUCT DETAILS SCREEN - BACK</string>
    <string name="instructions">Instructions</string>
    <string name="back">Back</string>
    <string name="go_back_to_feed">Go Back to Feed</string>
    <string name="go_to_welcome">Go to Welcome</string>
    <string name="go_to_feed">Go to Feed</string>
    <string name="go_to_instructions">Go to Instructions</string>
    <string name="go_to_product_details">Go to Shoe Details</string>
    <string name="insert_dummy_shoes">Insert Dummy Shoes</string>
    <string name="buy">Buy</string>
    <string name="edit">Edit</string>
    <string name="price_format">USD %s</string>
    <string name="top_selling_product">Top Selling Shoes</string>
    <string name="top_sellers">TOP SELLERS</string>
    <string name="shoes">SHOES</string>
    <string name="label_cancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="created_shoe">Add new shoe</string>
    <string name="update_shoe">Update shoe</string>

    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_red">RED</string>
    <string name="button_green">GREEN</string>
    <string name="how_to_play">How To Play:</string>
    <string name="how_to_play_description">Tab the screens and button.</string>
    <string name="description">Description</string>
    <string name="product_description_here">Shoe description here…</string>
    <string name="welcome_to_the_shoe_store">Welcome to the Shoe Store.\nPlease, authenticate to access the store manager.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_sample_data_saved">Sample data saved!</string>
    <string name="noe_shoes_found_message">No shoes found on the Store.\nWhat about to add some?</string>
    <string name="great">Great!</string>
    <string name="shoe_image_item">Shoe Image Item</string>
    <string name="top_seller">Top \nSeller</string>
    <string name="label_login">LOGIN</string>
    <string name="label_welcome">WELCOME</string>
    <string name="label_instructions">INSTRUCTIONS</string>
    <string name="label_feed">FEED</string>
    <string name="label_shoe_details">SHOE DETAILS</string>
    <string name="label_shoe_editor">SHOE EDITOR</string>
    <string name="label_shoe_name">Name</string>
    <string name="label_brand">Brand</string>
    <string name="label_price">Price</string>
    <string name="label_category">Category</string>
    <string name="label_season">Season</string>
    <string name="label_year">Year</string>
    <string name="label_stock">Stock</string>
    <string name="label_quantity_sold">Quantity sold</string>
    <string name="label_edit">Edit</string>
    <string name="label_update">UPDATE</string>
    <string name="add_new_shoe">Add a new shoe</string>
    <string name="label_delete">Delete</string>
    <string name="season">Season</string>
    <string name="hot_seller_shoe">Hot Seller Shoe \t</string>
    <string name="success">Success!!</string>
    <string name="message_something_went_wrong">Ooops!! Something went wrong.</string>
    <string name="label_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="message_confirm_delete_action">This action will delete the item from the database. This action can not be undone.</string>
    <string name="message_item_updated">Item updated!</string>
    <string name="message_item_deleted">Item deleted!</string>
    <string name="message_ok_got_it">OK, got it!</string>
    <string name="instructions_item_1">• Use the feed to keep track of all shoes.</string>
    <string name="instructions_item_2">• Click on an item to see its details.</string>
    <string name="instructions_item_3">• Clique on the ADD button to add a new shoe.</string>
    <string name="instructions_item_4">• You can edit or remove if needed.</string>
    <string name="instructions_item_5">• All items are store offline.</string>
    <string name="instructions_item_6">• Use de Top Seller option to group relevant shoes at the top of the list.</string>
    <string name="label_remember">Remember:</string>
    <string name="welcome_message">Welcome to the Shoe Store. \nHere you will be able to manage your shoes sales and control you shoes stock.</string>
</resources>
