<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instructions.InstructionsFragment">

        <ImageView
            android:id="@+id/introStepImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_all_shoes" />

        <LinearLayout
            android:id="@+id/instructionsItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/layout_margin_big"
            android:layout_marginTop="@dimen/layout_margin_big"
            android:layout_marginEnd="@dimen/layout_margin_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introStepImage">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/layout_margin_big"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:text="@string/label_instructions"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/instructions_item_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/instructions_item_2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/instructions_item_3" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/instructions_item_4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/layout_margin_medium"
                android:layout_marginBottom="@dimen/layout_margin_medium"
                android:textStyle="bold"
                android:text="@string/label_remember"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/instructions_item_5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/instructions_item_6"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonActionFromInstructions"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="@dimen/none"
            android:layout_height="@dimen/button_height_default"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/message_ok_got_it"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>