<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/navigateToWelcome"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/welcomeFragment"/>
        <action
            android:id="@+id/navigateFromLoginToFeed"
            app:destination="@id/productsFeedFragment"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@anim/fade_out"
            app:popUpTo="@id/productsFeedFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.welcome.WelcomeFragment"
        android:label="@string/label_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/navigateToInstructions"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:launchSingleTop="true"
            app:popUpTo="@id/instructionsFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.instructions.InstructionsFragment"
        android:label="@string/label_instructions"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/navigateToProductsFeed"
            app:destination="@id/productsFeedFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/productsFeedFragment"/>
    </fragment>

    <fragment
        android:id="@+id/productsFeedFragment"
        android:name="com.udacity.shoestore.productsfeed.ProductsFeedFragment"
        android:label="@string/label_feed"
        tools:layout="@layout/fragment_products_feed">
        <action
            android:id="@+id/navigateToProductDetails"
            app:destination="@id/productDetailsFragment"
            app:launchSingleTop="true"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/fade_out"/>
        <action
            android:id="@+id/navigateFromFeedToShoeEditor"
            app:destination="@id/productEditorFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/fade_out"/>
        <action
            android:id="@+id/navigateFromFeedToLogin"
            app:destination="@id/loginFragment"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@anim/fade_out"/>
    </fragment>

    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.udacity.shoestore.productdetails.ProductDetailsFragment"
        android:label="@string/label_shoe_details"
        tools:layout="@layout/fragment_product_details">
        <action
            android:id="@+id/navigateBackToProductsFeed"
            app:destination="@id/productsFeedFragment"
            app:popUpTo="@id/productsFeedFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_out_right"
            />
        <action
            android:id="@+id/navigateToProductEditor"
            app:destination="@id/productEditorFragment"
            app:popUpTo="@id/productDetailsFragment"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>
    <fragment
        android:id="@+id/productEditorFragment"
        android:name="com.udacity.shoestore.producteditor.ProductEditorFragment"
        android:label="@string/label_shoe_editor"
        tools:layout="@layout/fragment_product_editor">
        <action
            android:id="@+id/navigateBackToShoeDetails"
            app:destination="@id/productDetailsFragment"
            app:popUpTo="@id/productDetailsFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@anim/fade_out"/>
        <action
            android:id="@+id/navigateToProductsFeed"
            app:destination="@id/productsFeedFragment"
            app:popUpTo="@id/productsFeedFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/fade_in"
            app:popEnterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@anim/fade_out"/>
    </fragment>

</navigation>