<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:padding="@dimen/layout_margin_default"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/boxOne"
        style="@style/WhiteBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Product Name"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/boxTwo"
        style="@style/WhiteBox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/layout_margin_default"
        android:text="@string/box_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxOne" />

    <TextView
        android:id="@+id/boxThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_default"
        tools:text="Product Name"
        android:textSize="16sp"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toTopOf="@+id/boxTwo" />

    <TextView
        android:id="@+id/boxFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_default"
        tools:text="Brand"
        android:textSize="16sp"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/boxFive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwo"
        app:layout_constraintTop_toBottomOf="@+id/boxThree" />

    <TextView
        android:id="@+id/boxFive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_default"
        tools:text="Price"
        android:textSize="16sp"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/boxTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxTwo" />

    <TextView
        android:id="@+id/textViewHowToPlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin_default"
        android:text="@string/description"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewHowToPlayDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewHowToPlayDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/product_description_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewHowToPlay"
        app:layout_constraintTop_toBottomOf="@+id/boxTwo"
        app:layout_constraintVertical_bias="0.108" />

<!--    <Button-->
<!--        android:id="@+id/buttonRed"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/default_red"-->
<!--        android:layout_marginStart="@dimen/layout_margin_default"-->
<!--        android:text="@string/button_red"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@+id/buttonYellow"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/buttonYellow"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/buttonYellow"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/default_yellow"-->
<!--        android:layout_marginStart="@dimen/layout_margin_default"-->
<!--        android:layout_marginEnd="@dimen/layout_margin_default"-->
<!--        android:text="@string/button_yellow"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/buttonGreen"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toEndOf="@+id/buttonRed"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textViewHowToPlayDescription"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

<!--    <Button-->
<!--        android:id="@+id/buttonGreen"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/default_green"-->
<!--        android:layout_marginEnd="@dimen/layout_margin_default"-->
<!--        android:text="@string/button_green"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@+id/buttonYellow"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toEndOf="@+id/buttonYellow" />-->

    <Button
        android:id="@+id/buttonCancelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_extra"
        android:layout_marginBottom="@dimen/layout_margin_default"
        android:backgroundTint="@color/default_yellow"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSaveOrCreateShoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin_extra"
        android:layout_marginBottom="@dimen/layout_margin_default"
        android:backgroundTint="@color/default_green"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>